Add license section to Dynamic EMA Formulation notebook

--- a/About/filtro/Dynamic_EMA_Formulation.ipynb
+++ b/About/filtro/Dynamic_EMA_Formulation.ipynb
@@ -28,6 +28,7 @@
     "10. [Debug e Troubleshooting](#10-debug-e-troubleshooting)  \n",
     "11. [Estensioni e Varianti](#11-estensioni-e-varianti)  \n",
     "12. [Bibliografia Essenziale](#12-bibliografia-essenziale)  \n",
+    "13. [Licenza](#13-licenza)"
    ]
   },
   {
@@ -46,9 +47,9 @@
     "\n",
     "```\n",
     "┌─────────────┐     ┌─────────────────────┐     ┌──────────────────────────┐     ┌───────────────┐\n",
-    "│   SCL3300   │ --> │ Calibrazione Offset │ --> │ Filtro EMA Adattivo      │ --> │ UART / LoRa   │\n",
-    "│   (SPI)     │     │ (angoli X,Y,Z)      │     │  - Scalare (T)           │     │  (output)     │\n",
-    "│             │     │                     │     │  - Circolare (X,Y,Z)     │     │               │\n",
+    "│   SCL3300   │ --> │ Calibrazione Offset │ --> │ Filtro EMA Adattivo     │ --> │ UART / LoRa   │\n",
+    "│   (SPI)     │     │ (angoli X,Y,Z)      │     │  - Scalare (T)          │     │  (output)     │\n",
+    "│             │     │                     │     │  - Circolare (X,Y,Z)    │     │               │\n",
     "└─────────────┘     └─────────────────────┘     └──────────────────────────┘     └───────────────┘\n",
     "```"
    ]
@@ -364,6 +365,8 @@
     "- U. Jammalamadaka, A. Sengupta, *Topics in Circular Statistics*, World Scientific  "
    ]
   },
+  {
+  }
  ],
  "metadata": {
   "kernelspec": {
